<resources>
    <string name="app_name">Numenera</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_in">You are signed in as:</string>
    <string name="no_user_signed_in">It appears that no one has signed in.</string>
    <string name="content_description_logo">Obelisks And Occultists Logo</string>

    <string name="menu_sign_out">Sign Out</string>
    <string name="title_activity_character">Create New Character</string>
    <string name="button_activity_character_create">Create</string>
    <string name="button_activity_character_cancel">Cancel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="no_name_error">You must insert a name</string>
    <string name="editText_dialog_newCharacter_name_hint">Name</string>

    <string name="hint_character_name">Name</string>
    <string name="hint_character_descripter">Descripter</string>
    <string name="hint_character_type">Type</string>
    <string name="hint_character_focus">Focus</string>

    <string name="character_is_a">is a</string>
    <string name="character_who">who</string>

</resources>
